--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,11 @@
             <version>2.2</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+            <version>3.2.5</version>
+        </dependency>
 
 
     </dependencies>
