--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,21 @@
 *.o
 *.so
 
+.DS_Store
+/target
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.idea
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
