--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
 spring.application.name=ProductService
-fakeStore.api.url=https://fakestoreapi.com/products/{id}
-
-
-
 
 
 # postgresSQL configuration
@@ -16,10 +12,10 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Not required to use it explicitly
-## spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = update
 
 # connect auth server
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081
