--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,13 +17,12 @@ spring.datasource.password=${PRODUCT_SERVICE_DB_PASSWORD}
 # connect auth server
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${USER_SERVICE_URL}
 
-#LOCAL with cloud db
+#LOCAL ENVIRONMENT with cloud db
 #spring.datasource.url=jdbc:postgresql://<CLOUD_HOST_URL>:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 # connect auth server
 #spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081
-###
 
 
 # Define specific driver to make it faster otherwise it will search default by going through entire
