--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>ProductService</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1-LATEST</version>
     <name>ProductService</name>
     <description>ProductService</description>
     <properties>
