--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=ProductService
 #spring.datasource.url=jdbc:postgresql://localhost:5442/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
-# connect auth server
+##connect auth server
 #spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081
 
 #PRODUCTION
