basic pagination working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,18 @@ spring.application.name=ProductService
 # postgresSQL configuration
 ## database name is "postgres" and Data Source and Drivers name is "springbootcrud"
 ### DEVELOPMENT
-#spring.datasource.url=jdbc:postgresql://localhost:5442/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-##connect auth server
-#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081
+spring.datasource.url=jdbc:postgresql://localhost:5442/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#connect auth server
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081
 
 #PRODUCTION
-spring.datasource.url=${PRODUCT_SERVICE_DB_URL}
-spring.datasource.username=${PRODUCT_SERVICE_DB_USERNAME}
-spring.datasource.password=${PRODUCT_SERVICE_DB_PASSWORD}
-# connect auth server
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${USER_SERVICE_URL}
+#spring.datasource.url=${PRODUCT_SERVICE_DB_URL}
+#spring.datasource.username=${PRODUCT_SERVICE_DB_USERNAME}
+#spring.datasource.password=${PRODUCT_SERVICE_DB_PASSWORD}
+## connect auth server
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=${USER_SERVICE_URL}
 
 #LOCAL ENVIRONMENT with cloud RDS db
 #spring.datasource.url=jdbc:postgresql://<CLOUD_HOST_URL>:5432/postgres
