fake store implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=ProductService
+fakeStore.api.url=https://fakestoreapi.com/products/{id}
 
 # postgresSQL configuration
 ## database name is "postgres" and Data Source and Drivers name is "springbootcrud"
