--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.jpa.hibernate.show-sql=true
 
 # Logging
 logging.level.org.springframework.*=trace
+
+# enable it if you're are using AWS elastic cache url
+#spring.data.redis.host=http://localhost:6379/
