redis setup finished but has serializable issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,5 +38,5 @@ spring.jpa.hibernate.show-sql=true
 # Logging
 logging.level.org.springframework.*=trace
 
-# enable it if you're are using AWS elastic cache url
+# enable it if you are using AWS elastic cache url
 #spring.data.redis.host=http://localhost:6379/
