console object through dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ProductService
-fakeStore.api.url=https://fakestoreapi.com/products/{id}
+fakeStore.api.url=https://fakestoreapi.com/products
 
 # postgresSQL configuration
 ## database name is "postgres" and Data Source and Drivers name is "springbootcrud"
@@ -32,7 +32,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
 # Logging
