--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>3.3.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
 
     </dependencies>
 
