--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=ProductService
-
+server.port=${SERVER_PORT}
 # postgresSQL configuration
 ## database name is "postgres" and Data Source and Drivers name is "springbootcrud"
 ### DEVELOPMENT
-spring.datasource.url=jdbc:postgresql://localhost:5442/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${PRODUCT_SERVICE_DB_URL}
+spring.datasource.username=${PRODUCT_SERVICE_DB_USERNAME}
+spring.datasource.password=${PRODUCT_SERVICE_DB_PASSWORD}
 #connect auth server
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${USER_SERVICE_URL}
+# PRODUCT_SERVICE_DB_URL=jdbc:postgresql://localhost:5442/postgres;PRODUCT_SERVICE_DB_USERNAME=postgres;PRODUCT_SERVICE_DB_PASSWORD=postgres;USER_SERVICE_URL=http://localhost:8081;
 
 #PRODUCTION
 #spring.datasource.url=${PRODUCT_SERVICE_DB_URL}
